force-app/main/default/objects/Contracts__c/Contracts__c.object-meta.xml
<CustomObject>
    <label>Contracts</label>
    <nameField>
        <displayFormat>Contract-{0000}</displayFormat>
        <label>Contracts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>