force-app/main/default/objects/Contracts__c/fields/Next_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Billing_Date__c</fullName>
    <defaultValue>DATE(
YEAR(TODAY()),
MONTH(TODAY()),
1
)</defaultValue>
    <label>Next Billing Date</label>
    <type>Date</type>
</CustomField>