force-app/main/default/objects/Contracts__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Payment</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <label>🟢Active</label>
            </value>
            <value>
                <fullName>Payment Failed</fullName>
                <label>🔴Payment Failed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>