force-app/main/default/objects/Contracts__c/fields/Stripe_Sub_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Sub_ID__c</fullName>
    <label>Stripe Sub ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>